--- a/Rock Paper Scissors/Rock Paper Scissors/Base.lproj/Main.storyboard
+++ b/Rock Paper Scissors/Rock Paper Scissors/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lrO-YI-BjT">
     <device id="retina6_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,75 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Menu-->
+        <scene sceneID="IfL-mR-xyL">
+            <objects>
+                <viewController id="fN2-df-1Jg" customClass="MenuViewController" customModule="Rock_Paper_Scissors" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="oky-tW-ToJ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pYd-zB-7Mo">
+                                <rect key="frame" x="135.66666666666666" y="454" width="142.99999999999997" height="48"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="Multiplayer"/>
+                                <connections>
+                                    <segue destination="Sd4-pw-qCg" kind="show" id="DgX-Ye-Qc0"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RZ2-RS-g6n">
+                                <rect key="frame" x="124" y="394" width="166" height="48"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="Single player"/>
+                                <connections>
+                                    <segue destination="Rnv-VP-9Al" kind="show" id="8V1-9D-2EX"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="pYd-zB-7Mo" firstAttribute="centerX" secondItem="oky-tW-ToJ" secondAttribute="centerX" id="68a-Cs-G8v"/>
+                            <constraint firstItem="pYd-zB-7Mo" firstAttribute="centerY" secondItem="oky-tW-ToJ" secondAttribute="centerY" constant="30" id="OGN-NJ-bNf"/>
+                            <constraint firstItem="RZ2-RS-g6n" firstAttribute="centerY" secondItem="oky-tW-ToJ" secondAttribute="centerY" constant="-30" id="fR6-Ks-E7A"/>
+                            <constraint firstItem="RZ2-RS-g6n" firstAttribute="centerX" secondItem="oky-tW-ToJ" secondAttribute="centerX" id="rsC-oT-NEp"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="yBo-wO-6cd"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Menu" id="tEt-Rn-ZxZ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cp9-mY-CwB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="119" y="130"/>
+        </scene>
+        <!--Multiplayer-->
+        <scene sceneID="Jla-LS-MIT">
+            <objects>
+                <viewController id="Sd4-pw-qCg" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KUV-Gv-jto">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Coming soon" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cpD-zn-rqO">
+                                <rect key="frame" x="121.66666666666669" y="430" width="171" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="cpD-zn-rqO" firstAttribute="centerY" secondItem="KUV-Gv-jto" secondAttribute="centerY" id="RNt-Mc-ehb"/>
+                            <constraint firstItem="cpD-zn-rqO" firstAttribute="centerX" secondItem="KUV-Gv-jto" secondAttribute="centerX" id="aH4-5V-6a7"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="UN8-WR-Ady"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Multiplayer" id="7Ue-e6-jCl"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mhp-XQ-XY1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="883" y="472"/>
+        </scene>
+        <!--Single Player-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Rock_Paper_Scissors" customModuleProvider="target" sceneMemberID="viewController">
@@ -104,6 +172,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Single Player" id="MiD-7n-HJb"/>
                     <connections>
                         <outlet property="first_arm" destination="WaX-cj-bR2" id="tzc-Fh-B7F"/>
                         <outlet property="human_face" destination="UFT-YP-nJv" id="fg3-dg-mpM"/>
@@ -117,7 +186,96 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="129.91071428571428"/>
+            <point key="canvasLocation" x="1700" y="-188"/>
+        </scene>
+        <!--Difficulty-->
+        <scene sceneID="y6I-fQ-Cnr">
+            <objects>
+                <viewController id="Rnv-VP-9Al" userLabel="Difficulty" customClass="DifficultyViewController" customModule="Rock_Paper_Scissors" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4g9-bw-GTB">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="2" minValue="1" maxValue="3" translatesAutoresizingMaskIntoConstraints="NO" id="3oe-Q8-acB">
+                                <rect key="frame" x="18" y="433" width="378" height="31"/>
+                                <color key="minimumTrackTintColor" name="systemGreenColor" catalog="System" colorSpace="catalog"/>
+                                <color key="maximumTrackTintColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🤪" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bGf-Tg-ez2">
+                                <rect key="frame" x="349" y="377" width="45" height="48"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="😈" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WR9-lz-fmx">
+                                <rect key="frame" x="20" y="377" width="45" height="48"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y9S-Iq-nMg">
+                                <rect key="frame" x="184" y="627" width="46" height="42"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="Play"/>
+                                <connections>
+                                    <action selector="new_game_button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4rO-Im-QlY"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="JP1-Mf-MGt"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose the difficulty" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e8e-c5-ZfY">
+                                <rect key="frame" x="73.666666666666686" y="230" width="267" height="36"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
+                                </accessibility>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="3oe-Q8-acB" firstAttribute="top" secondItem="bGf-Tg-ez2" secondAttribute="bottom" constant="8" id="9YL-AE-Pk4"/>
+                            <constraint firstItem="3oe-Q8-acB" firstAttribute="centerY" secondItem="4g9-bw-GTB" secondAttribute="centerY" id="L6y-Np-dbs"/>
+                            <constraint firstItem="3oe-Q8-acB" firstAttribute="leading" secondItem="cfE-Bn-7f2" secondAttribute="leading" constant="20" id="UZW-R2-Rvq"/>
+                            <constraint firstItem="cfE-Bn-7f2" firstAttribute="trailing" secondItem="3oe-Q8-acB" secondAttribute="trailing" constant="20" id="dk8-KU-gyK"/>
+                            <constraint firstItem="3oe-Q8-acB" firstAttribute="top" secondItem="bGf-Tg-ez2" secondAttribute="bottom" constant="8" id="euE-Df-jb2"/>
+                            <constraint firstItem="Y9S-Iq-nMg" firstAttribute="centerY" secondItem="4g9-bw-GTB" secondAttribute="centerY" constant="200" id="fmH-bY-boV"/>
+                            <constraint firstItem="WR9-lz-fmx" firstAttribute="leading" secondItem="cfE-Bn-7f2" secondAttribute="leading" constant="20" id="g3h-mg-NvV"/>
+                            <constraint firstItem="3oe-Q8-acB" firstAttribute="top" secondItem="WR9-lz-fmx" secondAttribute="bottom" constant="8" id="h0J-a3-vei"/>
+                            <constraint firstItem="cfE-Bn-7f2" firstAttribute="trailing" secondItem="bGf-Tg-ez2" secondAttribute="trailing" constant="20" id="n97-1I-WVo"/>
+                            <constraint firstItem="Y9S-Iq-nMg" firstAttribute="centerX" secondItem="4g9-bw-GTB" secondAttribute="centerX" id="qMz-c7-rI0"/>
+                            <constraint firstItem="e8e-c5-ZfY" firstAttribute="centerY" secondItem="4g9-bw-GTB" secondAttribute="centerY" constant="-200" id="t82-ox-Xny"/>
+                            <constraint firstItem="e8e-c5-ZfY" firstAttribute="centerX" secondItem="4g9-bw-GTB" secondAttribute="centerX" id="vrd-QR-Xxj"/>
+                            <constraint firstItem="3oe-Q8-acB" firstAttribute="centerX" secondItem="4g9-bw-GTB" secondAttribute="centerX" id="zKS-uc-HTz"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="cfE-Bn-7f2"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Difficulty" id="PUO-TN-RGe"/>
+                    <connections>
+                        <outlet property="difficult" destination="3oe-Q8-acB" id="AzE-uW-hay"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8rd-3U-f6n" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="883" y="-188"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="G48-7D-Uub">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="lrO-YI-BjT" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Lga-O9-boe">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="fN2-df-1Jg" kind="relationship" relationship="rootViewController" id="U5w-ik-KJO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uxG-vy-i76" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-743" y="130"/>
         </scene>
     </scenes>
 </document>
